Section#Latest news - correct sizing and spacing above & below Title and link

--- a/css/application.css
+++ b/css/application.css
@@ -3386,6 +3386,8 @@ div.container div.latest-news-headline h2 strong {
   font-weight: 600;
 }
 div.container div.latest-news-headline a {
+  margin-top: -20px;
+  padding-bottom: 25px;
   text-decoration: none;
   font-weight: 600;
   font-size: 1.75rem;
@@ -3411,6 +3413,9 @@ div.container div.latest-news-headline a em {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+  }
+  div.container div.latest-news-headline h2 {
+    margin-bottom: -20px;
   }
   div.container div.latest-news-headline a.sm {
     display: none;
